# CppSoftwareRasterizer

./: .gitignore  CMakeLists.txt  README.md
include/: Colors.hpp  Framebuffer.hpp  Math.hpp  Texture.hpp  mesh.hpp
results/: teste.ppm  teste9.ppm
src/: Framebuffer.cpp  Texture.cpp  main.cpp  mesh.cpp
test_models/tree/: tree.mtl
